--- a/task.yaml
+++ b/task.yaml
@@ -19,11 +19,13 @@
           name: tree
           update_cache: yes
           state: latest #absent present
+        
       - name: start and enable services
         service:
           name: httpd
           enabled: true
           state: started
+        notify: apache_started  
       - name: install latest package of firewalld
         yum:
           name: firewalld
@@ -43,3 +45,18 @@
         copy:
           content: "Welcome to Ansible Learning course \n"
           dest: /var/www/html/index.html
+      - name: defining web server name
+        lineinfile:
+          path: /etc/httpd/conf/httpd.conf
+          line: ServerName www.client1.example.com:80
+          insertafter: "#ServerName"
+      - name: defining web server name
+        lineinfile:
+          path: /etc/hosts
+          line: 192.168.43.19 www.client1.example.com
+    handlers:
+        - name: apache_started
+          service:
+            name: httpd
+            start: restarted
+          
